--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -171,3 +171,21 @@ li a:hover {
     color: white;
     border-top: #4aaaa5 solid 10px;
 }
+
+@media screen and (max-width: 980px) {
+    body {
+        background-color: burlywood;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    body {
+        background-color: brown;
+    }
+}
+
+@media screen and (max-width: 640px) {
+    body {
+        background-color: hotpink;
+    }
+}
