--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,149 +1,245 @@
-/* styling the about page */
-
-body{
-    margin: 0 auto;
+body {
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-size: 18px;
+  line-height: 34px;
+  color: #777777;
+  background: url("../images/concrete_seamless.png");
 }
 
-header{
-    font-family: 'Georgia', 'Times New Roman', Times, serif;
-    background: white;
-    color: #4aaaa5;
-    width: 100%;
-    display: inline-block;
-    text-align: center;
+* {
+  box-sizing: border-box;
 }
 
-h1{
-    margin: 0;
-    display: inline;
-    color: white;
-    background-color: #4aaaa5;
-    margin: auto;
-    text-align: center;
-    padding: 20px;
+/* general */
+
+.container {
+  width: 100%;
+  max-width: 960px;
+  margin: 0 auto;
+  clear: both;
 }
 
-.nav{
-    /* display: inline-block; */
-    float: right;
-}
-
-ul{
-    list-style-type: none;
-    margin: 0px;
-    padding: 0px;
-    overflow: hidden;
-    background: #333;   
-}
-
-li{
-    float: left;
-}
-
-li a {
-    display: block;
-    color: white;
-    text-align: right;
-    padding: 14px 16px;
-    text-decoration: none;
-}
-
-li a:hover {
-    background-color: #4aaaa5;
-}
-
-.background_img{
-    background-image: url("../images/tiny-squares.png");
-    background-size: cover;
-}
-
-.main_content{
-    background-color: white;
-    width: 960px;
-    margin-left: 250px;
-    margin-top: 50px;
-}
-
-#my_pic{
-    transform: rotate(90deg);
-}
-
-.about_me {
-    color: #4aaaa5;
-    padding: 20px;
-    font-weight: bolder;
-    font-size: 40px;
-    
-}
-
-.hline1 {
-    width: auto;
-    height: 2px;
-    background-color: #777777;
-    margin: 20px;
-}
-
-#my_pic{
-    width: 200px;
-    height: 200px;
-    margin: 20px;
-    float: left;
-}
-
+h1,
+h2,
+h3,
 p {
-    font-size: 16px;
-    margin: 20px;
+  margin-bottom: 20px;
 }
 
-.p1 {
-    padding: 20px;
+p:last-child {
+  margin-bottom: 0;
 }
 
-.p2 {
-    clear: both;  
+h1,
+h2,
+h3 {
+  font-family: Georgia, Times, "Times New Roman", serif;
+  font-weight: 700;
+  color: #4aaaa5;
 }
 
-.footer {
-    clear: both;
-    width: auto;
-    height: 70px;
-    background-color: #777777;
-    text-align: center;
-    font-size: 14px;
-    color: white;
-    border-top: #4aaaa5 solid 10px;
+h1 {
+  padding-bottom: 20px;
+  font-size: 30px;
+  line-height: 49px;
+  border-bottom: 3px solid #dddddd;
 }
 
-@media screen and (max-width: 980px) {
-    body {
-        background-color: burlywood;
-    }
-
-    .main_content {
-        max-width: 850px;
-        float: left;
-        margin-left: auto;
-        background-color: green;
-    }
-    
+h2,
+h3 {
+  font-size: 22px;
 }
 
-@media screen and (max-width: 768px) {
-    body {
-        background-color: brown;
-    }
+/* header */
 
-    .main_content {
-        background-color: green;
-    }
-    
+#masthead {
+  position: fixed;
+  z-index: 99;
+  width: 100%;
+  margin: 0 0 30px;
+  overflow: auto;
+  color: #ffffff;
+  background: #ffffff;
+  border-bottom: 2px solid #cccccc;
 }
 
+#logo {
+  float: left;
+  width: 250px;
+  height: 90px;
+  font-family: Georgia, Times, "Times New Roman", serif;
+  font-size: 30px;
+  font-weight: 700;
+  line-height: 90px;
+  color: #ffffff;
+  text-align: center;
+  text-decoration: none;
+  background: #4aaaa5;
+}
 
-@media screen and (max-width: 640px) {
-    body {
-        background-color: hotpink;
-    }
- 
+nav {
+  float: right;
+  margin-top: 25px;
+}
 
+nav a {
+  display: inline-block;
+  padding-left: 15px;
+  margin-left: 15px;
+  line-height: 18px;
+  color: #999;
+  text-decoration: none;
+  border-left: 1px solid #efefef;
+}
+
+nav a:first-child {
+  border-left: 0 none;
+}
+
+/* footer */
+
+footer {
+  padding: 30px 0;
+  clear: both;
+  font-size: 12px;
+  color: #ffffff;
+  color: #cccccc;
+  text-align: center;
+  background: #666666;
+  border-top: 8px solid #4aaaa5;
+  height: 50px;
+}
+
+h3, h2 {
+  padding-bottom: 20px;
+  margin-bottom: 15px;
+  line-height: 22px;
+  border-bottom: 2px solid #eeeeee;
+}
+
+/* main */
+
+#main-container {
+  padding-top: 130px;
+  min-height: calc(100vh - 70px);
+}
+
+.main-section {
+  float: left;
+  width: 100%;
+  max-width: 960px;
+  padding: 30px;
+  margin: 0 0 40px;
+  background: #ffffff;
+  border: 1px solid #dddddd;
+}
+
+/* portfolio page */
+
+.work {
+  position: relative;
+  float: left;
+  width: 274px;
+  margin: 20px 0 25px;
+  overflow: auto;
+}
+
+.work:nth-child(even) {
+  margin-right: 40px;
+}
+
+.work img {
+  width: 100%;
+  border: 0 none;
+  opacity: 0.8;
+}
+
+.work h3 {
+  position: absolute;
+  bottom: 20px;
+  width: 100%;
+  padding: 15px;
+  margin-bottom: 0;
+  font-weight: 300;
+  line-height: 30px;
+  color: #ffffff;
+  text-align: center;
+  background: #4aaaa5;
+  border-bottom: 0;
+}
+
+.auth-image {
+  float: left;
+  width: 200px;
+  height: auto;
+  margin-top: 10px;
+  margin-right: 25px;
+}
+
+/* contact page */
+
+#contact-form ul {
+  margin-bottom: 20px;
+}
+
+#contact-form li {
+  margin-bottom: 10px;
+}
+
+label,
+input[type=text],
+input[type=email],
+textarea {
+  display: block;
+  width: 100%;
+}
+
+input[type=text],
+input[type=email],
+textarea {
+  height: 35px;
+  padding: 0 10px;
+  font-size: 14px;
+  border: 1px solid #dddddd;
+}
+
+textarea {
+  height: 200px;
+}
+
+input[type=submit] {
+  padding: 10px 30px;
+  font-size: 18px;
+  color: #ffffff;
+  cursor: pointer;
+  background: #4aaaa5;
+  border: 0 none;
+}
+
+@media only screen and (max-width: 980px) {
+  #masthead{
+    background-color: burlywood;
+  }
+  
+  .main-section {
+    background-color: lightsalmon;
+  }
+
+  .container{
+    width: 100%;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .main-section {
+    background-color: blue;
+  }
+
+}
+
+@media only screen and (max-width: 640px) {
+  .main-section {
+    background-color: green;
+    color: black;
+  }
 }
